// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`date (isCI = false) > can cancel 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  Pick a date
<cyan>│</fg>  [7m [27m<dim>y</bold><dim>y</bold><dim>y</bold><dim>/</fg><dim>mm</bold><dim>/</fg><dim>dd</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<red>■</fg>  Pick a date
<dim>│</fg>",
  "
",
  "<cursor.show>",
]
`;

exports[`date (isCI = false) > defaultValue used when empty submit 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  Pick a date
<cyan>│</fg>  [7m2[27m025<dim>/</fg>12<dim>/</fg>25
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  Pick a date
<dim>│</fg>  <dim>2025/12/24</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`date (isCI = false) > renders initial value 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  Pick a date
<cyan>│</fg>  [7m2[27m025<dim>/</fg>01<dim>/</fg>15
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  Pick a date
<dim>│</fg>  <dim>2025/01/14</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`date (isCI = false) > renders message 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  Pick a date
<cyan>│</fg>  [7m2[27m025<dim>/</fg>01<dim>/</fg>15
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  Pick a date
<dim>│</fg>  <dim>2025/01/14</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`date (isCI = false) > renders submitted value 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  Pick a date
<cyan>│</fg>  [7m2[27m025<dim>/</fg>06<dim>/</fg>15
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  Pick a date
<dim>│</fg>  <dim>2025/06/14</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`date (isCI = false) > supports MM/DD/YYYY format 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  Pick a date
<cyan>│</fg>  [7m0[27m1<dim>/</fg>15<dim>/</fg>2025
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  Pick a date
<dim>│</fg>  <dim>01/14/2025</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`date (isCI = false) > withGuide: false removes guide 1`] = `
[
  "<cursor.hide>",
  "<cyan>◆</fg>  Pick a date
[7m2[27m025<dim>/</fg>01<dim>/</fg>15

",
  "<cursor.backward count=999><cursor.up count=3>",
  "<erase.down>",
  "<green>◇</fg>  Pick a date
  <dim>2025/01/14</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`date (isCI = true) > can cancel 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  Pick a date
<cyan>│</fg>  [7m [27m<dim>y</bold><dim>y</bold><dim>y</bold><dim>/</fg><dim>mm</bold><dim>/</fg><dim>dd</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<red>■</fg>  Pick a date
<dim>│</fg>",
  "
",
  "<cursor.show>",
]
`;

exports[`date (isCI = true) > defaultValue used when empty submit 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  Pick a date
<cyan>│</fg>  [7m2[27m025<dim>/</fg>12<dim>/</fg>25
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  Pick a date
<dim>│</fg>  <dim>2025/12/24</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`date (isCI = true) > renders initial value 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  Pick a date
<cyan>│</fg>  [7m2[27m025<dim>/</fg>01<dim>/</fg>15
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  Pick a date
<dim>│</fg>  <dim>2025/01/14</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`date (isCI = true) > renders message 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  Pick a date
<cyan>│</fg>  [7m2[27m025<dim>/</fg>01<dim>/</fg>15
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  Pick a date
<dim>│</fg>  <dim>2025/01/14</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`date (isCI = true) > renders submitted value 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  Pick a date
<cyan>│</fg>  [7m2[27m025<dim>/</fg>06<dim>/</fg>15
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  Pick a date
<dim>│</fg>  <dim>2025/06/14</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`date (isCI = true) > supports MM/DD/YYYY format 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  Pick a date
<cyan>│</fg>  [7m0[27m1<dim>/</fg>15<dim>/</fg>2025
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  Pick a date
<dim>│</fg>  <dim>01/14/2025</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`date (isCI = true) > withGuide: false removes guide 1`] = `
[
  "<cursor.hide>",
  "<cyan>◆</fg>  Pick a date
[7m2[27m025<dim>/</fg>01<dim>/</fg>15

",
  "<cursor.backward count=999><cursor.up count=3>",
  "<erase.down>",
  "<green>◇</fg>  Pick a date
  <dim>2025/01/14</bold>",
  "
",
  "<cursor.show>",
]
`;
